overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@
 html,
 body {
   display: flex;
+  overflow-x: hidden;
 }
 
 body,
